--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Mojolicious-Plugin-Disqus-Tiny
 
 {{$NEXT}}
+- Fixes render partial deprecation #2
 
 1.003  2013-09-06 16:37:01 EDT
   - Update deps
